--- a/styles/style.css
+++ b/styles/style.css
@@ -8,7 +8,7 @@
 body {
     font-family: "Nunito", sans-serif;
     font-optical-sizing: auto;
-    background-image: url("../images/gradient.svg");
+    background-image: url("../images/gradient.png");
     color: #fff;
     margin: 0;
     padding: 0;
