--- a/styles/style.css
+++ b/styles/style.css
@@ -120,20 +120,20 @@ main .header-text{
     margin-bottom: 20px;
 }
 
-#overflow-mobile{
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
+.tabs-container{
+    overflow: hidden;
     width: 100%;
-    overflow-x: auto;
-    max-width: 1147px;
+}
+
+.overflow-mobile {
+    display: flex;
 }
 
 .tab {
+    flex: 0 0 auto;
     padding: 10px 20px;
     background-color: rgb(55 65 81 / 0.3);
     color: #fff;
-    margin-right: 10px;
     border-radius: 5px 5px 0 0;
     -webkit-user-select: none;
        -moz-user-select: none;
@@ -143,16 +143,44 @@ main .header-text{
     font-weight: bold;
     border: 1px solid #3a3a3ad4;
     cursor: pointer;
+    text-wrap-mode: nowrap;
     -ms-touch-action: manipulation;
         touch-action: manipulation;
-    text-wrap-mode: nowrap;
     -webkit-tap-highlight-color:  rgba(255, 255, 255, 0);
+    white-space: nowrap;
 }
 .tab.active {
     background-color: #1a1a1a;
     color: #00e300;
     border: 1px solid rgba(132, 204, 22, .6);
 }
+
+.tab.first-tab{
+    padding-right: 11px;
+}
+
+.tabs-container .dropdown-arrow{
+    background: #343434;
+    border-radius: 4px;
+    padding: 1px 3px;
+    margin-left: 10px;
+}
+
+.swiper {
+    width: 100%;
+    overflow: visible;
+}
+
+.swiper-slide {
+    width: auto !important;
+}
+
+.card-grid {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+    gap: 20px;
+}
+
 .filters {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -178,6 +206,14 @@ main .header-text{
     grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
     gap: 20px;
 }
+
+/* PLUGIN COUNTER */
+.plugin-counter{
+    margin: 10px 0;
+    font-weight: bold;
+}
+
+
 /* CARD */
 .card {
     position: relative;
@@ -189,6 +225,7 @@ main .header-text{
             box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
     background-color: rgb(55 65 81 / 0.3);
     border: 1px solid transparent;
+    cursor: pointer;
 }
 .card:hover{
     border: 1px solid rgba(132, 204, 22, .6);
@@ -321,10 +358,158 @@ main .header-text{
 }
 
 
+/* Expand card content */
+
+.modal{
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    
+    background-color:rgba(0, 0, 0, 0.5);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 1000;
+
+    font-family: "Nunito", sans-serif;
+    font-optical-sizing: auto;
+    border-radius: .5rem;
+    -webkit-box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    
+    /* background-color: rgb(55 81 76 / 39%); */
+    border: 1px solid transparent;
+    
+}
+
+.modal-content{
+    position: relative;
+    max-width: 1000px;
+    max-height: 80vh;
+
+    padding: 0px 40px 20px 40px;
+    overflow-y: auto;
+
+    font-family: "Nunito", sans-serif;
+    font-optical-sizing: auto;
+    
+    border-radius: .5rem;
+    -webkit-box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+
+    background: radial-gradient(#0f1711, #232f25);
+    /* background: #232f25; */
+    /* background: url('http://x.anione.fun/images/gradient.png'); */
+    border: 1px solid rgba(132, 204, 22, .6);
+
+}
+
+.modal-content img {
+    max-width: 100%;
+    height: auto;
+    border: 1px solid #547643;
+    border-radius: 9px;
+}
+
+.modal-body a{
+    color: #00c23d;
+}
+
+/* FIX: for parsed html img tag */
+.wp-block-image{
+    margin: 0;
+}
+
+.modal-body h3{
+    margin-top: 0;
+}
+
+.modal-close-div {
+    position: sticky;
+    top: 30px;
+    left: 100%;
+    transform: translateX(12px);
+    display: flex;
+    width: 40px;
+    height: 40px;
+    font-weight: bolder;
+    background: #2a2e33de;
+    border-radius: 50%;
+    border: 2px solid #3a3a3ad4;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+    z-index: 10;
+}
+
+.modal-close{
+    position: relative;
+    font-size: 24px;
+    cursor: pointer;
+}
+
+
+/* SKROLL */
+
+
+
+/* Стилизация скроллбара для WebKit-браузеров (Chrome, Safari, Edge) */
+.modal-content::-webkit-scrollbar {
+    width: 10px; /* Ширина скроллбара */
+}
+
+.modal-content::-webkit-scrollbar-track {
+    background: #072200; /* Цвет фона трека */
+    border-radius: 10px; /* Закругленные края трека */
+}
+
+.modal-content::-webkit-scrollbar-thumb {
+    background: #233900; /* Болотно-зеленый цвет ползунка */
+    border-radius: 10px; /* Закругленные края ползунка */
+}
+
+.modal-content::-webkit-scrollbar-thumb:hover {
+    background: #3A4A22; /* Чуть темнее при наведении */
+}
+
+/* Стилизация скроллбара для Firefox */
+.modal-content {
+    scrollbar-width: thin; /* Делаем скроллбар тонким */
+    scrollbar-color: #233900 #072200; /* Цвет ползунка и трека */
+}
+
 /*MOBILE*/
 
 @media only screen and (max-width: 600px) {
     .logo h1{
         display: none;
+    }
+
+    .modal-close-div{
+        position: fixed;
+        width: 50px;
+        height: 50px;
+        bottom: 40px;
+        top: unset;
+        left: calc(50% - 40px); 
+        transform: translateX(12px);
+        background-color: #2a2e33;
+    }
+
+    .modal-content{
+        margin: 10px;
+        padding: 20px;
+        max-height: calc(100% - 20px);
+        box-sizing: border-box;
+        /* background: linear-gradient(140deg, #374a51, #2f393c); */
+    }
+
+
+    body, .card{
+        -ms-touch-action: manipulation;
+        touch-action: manipulation;
+        -webkit-tap-highlight-color:  rgba(255, 255, 255, 0);
     }
 }
